--- a/MainPage/index.css
+++ b/MainPage/index.css
@@ -1,6 +1,9 @@
 .resim{
-    width: 100px;
-    height: 100px;
+    width: 300px;
+    height: 200px;
+    border-radius: 50px;
+    margin: 20px
+    
 }
 .yazi{
     font-size: 50px;
@@ -13,17 +16,44 @@
 
 .buton{
     border-radius: 50px;
-    width: 100px;
+    width: 150px;
     height: 50px;
-    background: transparent;
+
     font-size: larger;
     font-family: 'Times New Roman', Times, serif;
+    position: absolute;
+    top: 500px;
+    left: 500px;
+}
+.baslik{
+    color:white
+}
+.altbaslik{
+    color: white;
+    position: absolute;
+    top: 40px;
+    left: 200px;
+    font-size: 25px;
+}
+.altbaslik:hover{
+    text-decoration: underline;
+    color: green;
+
+}
+.altbaslik1{
+    color: white;
+    position: absolute;
+    top: 40px;
+    left: 300px;
+    font-size: 25px;
+    
 }
 
 body {
-    background-image: url('köpek.jpg');
+    background-image: url('uzungöl.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    
   }
